# cyber-range-5g-sdn

./: .gitignore  .pre-commit-config.yaml  Dockerfile.ovs  Dockerfile.ryu  Dockerfile.scanner  Vagrantfile  docker-compose.yml  journal.md  makefile  pyproject.toml  pytest.ini  requirements.txt
datasets/benign_http/: client_to_server.pcap  server_to_client.pcap
datasets/benign_postgres/: meta.json  tcp_172.19.0.11_5432_172.19.0.50_53700.pcap  tcp_172.19.0.50_53700_172.19.0.11_5432.pcap
docker/: Dockerfile.ryu-test  ovs-entrypoint.sh  ovs-setup.sh
playground/: port_scanner.py
src/cyber_range_5g_sdn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/playground/: iface_stats.py  pcap_splitter.py  requirements.txt
src/ryu_app/: simple_switch.py
tests/: ryu_test_simple_switch.py  test_iface_stats.py  test_pcap_splitter.py  test_port_scanner.py
